# Chat

./: CMakeLists.txt  README.md
src/: hotkey.cpp
src/include/: hotkey.h  settings.h  something.h
